# ToDoList

./: .env.example  .gitignore  README.md  ToDoList FastAPI Endpoints.postman_collection.json  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 6a3a832f3664_initial_phase_2_migration.py
models/: project.py  task.py
services/: todo_manager.py
todo_list_app/: __main__.py  cli.py  config.py  repository.py
todo_list_app/api/: routers.py
todo_list_app/api/controller_schemas/requests/: projects_request_schema.py  tasks_request_schema.py
todo_list_app/api/controller_schemas/responses/: projects_response_schema.py  tasks_response_schema.py
todo_list_app/api/controllers/: projects_controller.py  tasks_controller.py
todo_list_app/cli/: console.py
todo_list_app/commands/: autoclose_overdue.py  scheduler.py
todo_list_app/db/: session.py
todo_list_app/exceptions/: repository_exceptions.py  service_exceptions.py
todo_list_app/models/: __init__.py  project.py  task.py
todo_list_app/repositories/: __init__.py  project_repository.py  sql_repository.py  task_repository.py
todo_list_app/services/: project_service.py  task_service.py
