[tool.poetry]
name = "todo_list_app"
version = "0.1.0"
description = "ToDoList Phase 1 - In-Memory"
authors = ["Pooriya <pooriyamm83@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"